@@ -50,7 +50,10 @@ static char help_text[]="NetXMS Server Version " NETXMS_VERSION_STRING "\n"
                         "   --debug-objects     : Print object manager debug information.\n"
                         "   --debug-snmp        : Print SNMP debug information.\n"
                         "   --dump-sql          : Dump all SQL queries to log.\n"
-#ifndef _WIN32
+#ifdef _WIN32
+                        "   --login <user>      : Login name for service account.\n"
+                        "   --password <passwd> : Password for service account.\n"
+#else
                         "   --pid-file <file>   : Specify pid file.\n"
 #endif
                         "\n"
@@ -83,6 +86,7 @@ static char help_text[]="NetXMS Server Version " NETXMS_VERSION_STRING "\n"
 static BOOL ParseCommandLine(int argc, char *argv[])
 {
    int i;
+   TCHAR *pszLogin = NULL, *pszPassword = NULL;
 
    for(i = 1; i < argc; i++)
    {
@@ -101,11 +105,22 @@ static BOOL ParseCommandLine(int argc, char *argv[])
          i++;
          nx_strncpy(g_szConfigFile, argv[i], MAX_PATH);     // Next word should contain name of the config file
       }
-#ifndef _WIN32
+#ifdef _WIN32
+      else if (!strcmp(argv[i], "--login"))
+      {
+         i++;
+         pszLogin = argv[i];
+      }
+      else if (!strcmp(argv[i], "--password"))
+      {
+         i++;
+         pszPassword = argv[i];
+      }
+#else
       else if (!strcmp(argv[i], "--pid-file"))  // PID file
       {
          i++;
-         strcpy(g_szPIDFile, argv[i]);     // Next word should contain name of the PID file
+         nx_strncpy(g_szPIDFile, argv[i], MAX_PATH);     // Next word should contain name of the PID file
       }
 #endif
       else if (!strcmp(argv[i], "--debug-all"))
@@ -189,9 +204,17 @@ static BOOL ParseCommandLine(int argc, char *argv[])
          }
 
          if (!strcmp(argv[i], "install"))
-            InstallService(exePath, dllPath);
+         {
+            if ((pszLogin != NULL) && (pszPassword == NULL))
+               pszPassword = _T("");
+            if ((pszLogin == NULL) && (pszPassword != NULL))
+               pszPassword = NULL;
+            InstallService(exePath, dllPath, pszLogin, pszPassword);
+         }
          else
+         {
             InstallEventSource(dllPath);
+         }
          return FALSE;
       }
       else if (!strcmp(argv[i], "remove"))
