@@ -23,6 +23,8 @@
 #include <winsock2.h>
 #include <afxsock.h>		// MFC socket extensions
 
+#include <winsvc.h>
+
 //{{AFX_INSERT_LOCATION}}
 // Microsoft Visual C++ will insert additional declarations immediately before the previous line.
 
