@@ -74,6 +74,8 @@ struct WIZARD_CFG_INFO
    TCHAR m_szLogFile[MAX_PATH];
    TCHAR m_szSMSDriver[MAX_PATH];
    TCHAR m_szSMSDrvParam[MAX_DB_STRING];
+   TCHAR m_szServiceLogin[MAX_DB_STRING];
+   TCHAR m_szServicePassword[MAX_DB_STRING];
 };
 
 
